Adding some of the collected results